fix layout overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,9 @@ body {
   position: absolute;      
   z-index: 1000;             
 }
+
+html,
+body {
+  height: 100%;
+  overflow-x: hidden;
+}
